--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,14 +4,12 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- Python 3 compatibility.
 
 1.6.1 (2016-02-15)
 ------------------
 
 - Update tests.
-
 
 1.6 (2012-05-10)
 ----------------
