--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,9 @@ Changelog
 ------------------
 
 - Bugfix: Exception pages did not report their contents as text/html, but used
-  text/plain instead, or didnt report Content-Type at all.
+  text/plain instead (from their `zope.errorview` baseclasses). Layouts and
+  pages are about HTML however and the sensible default content type for those
+  is `text/html`
 
 3.0.2 (2018-01-17)
 ------------------
