Update to ``zope.component >= 5``.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Changelog
 
 - Add support for Python 3.7, 3.8 and 3.9.
 
+- Update to ``zope.component >= 5``.
+
 - Drop support for Python 3.4.
 
 
