--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,11 +4,9 @@ Changelog
 4.0 (unreleased)
 ----------------
 
-- Add support for Python 3.11.
-
 - Drop support for Python 2.7, 3.5, 3.6.
 
-- Add support for Python 3.7, 3.8, 3.9, 3.10.
+- Add support for Python 3.7, 3.8, 3.9, 3.10, 3.11.
 
 - Update to ``zope.component >= 5``.
 
