--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,12 @@
 Changelog
 =========
 
-3.1.0 (unreleased)
-------------------
+4.0 (unreleased)
+----------------
 
-- Add support for Python 3.7, 3.8, 3.9, 3.10.
+- Drop support for Python 2.7, 3.5, 3.6.
+
+- Add support for Python 3.7, 3.8, 3.9, 3.10, 3.11.
 
 - Update to ``zope.component >= 5``.
 
